# gdb-dashboard-svdregisters

./: Cargo.toml  README.md  registers.txt  svdgtktree.py  svdregisters.py  svdselector.py
src/: main.rs  registers.txt
