[package]
name = "svdselection"
version = "0.0.1"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk.git"}
glib = { git = "https://github.com/gtk-rs/glib.git"}
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git"}
svd-parser = "0.5"
